...
                            ),
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.spaceAround,
                              children: [
                                _FluidTab(
                                  icon: Icons.home_rounded,
                                  label: "Home",
                                  expansionRatio: widget.selectedIndex == 0
                                      ? (1.0 - dragValue.abs())
                                      : (targetIndex == 0 ? dragValue.abs() : 0.0),
                                  activeColor: AppColors.primaryGreen,
                                  onTap: () => _handleTabTap(0),
                                ),
                                _FluidTab(
                                  icon: Icons.medical_services_rounded,
                                  label: "Doctors",
                                  expansionRatio: widget.selectedIndex == 1
                                      ? (1.0 - dragValue.abs())
                                      : (targetIndex == 1 ? dragValue.abs() : 0.0),
                                  activeColor: const Color(0xFF007BFF),
                                  onTap: () => _handleTabTap(1),
                                ),
...
                                      : (targetIndex == 2 ? dragValue.abs() : 0.0),
                                  activeColor: const Color(0xFFFF9F00),
                                  onTap: () => _handleTabTap(2),
                                ),
                                _FluidTab(
                                  icon: Icons.account_circle_rounded,
                                  label: "Profile",
                                  expansionRatio: widget.selectedIndex == 3
                                      ? (1.0 - dragValue.abs())
                                      : (targetIndex == 3 ? dragValue.abs() : 0.0),
                                  activeColor: const Color(0xFF8E44AD),
                                  onTap: () => _handleTabTap(3),
                                ),
...
