...
                    ),
                    child: IntrinsicHeight(
                      child: Column(
                        children: [
                          const SizedBox(height: 100),
                          Text(
                            'Welcome back',
                            textAlign: TextAlign.center,
                            style: AppTextStyles.h1(context),
                          ),
                          const SizedBox(height: 12),
                          Text(
                            'Manage your appointments and medical records securely',
...
                                _isPasswordVisible = !_isPasswordVisible;
                              });
                            },
                          ),
                          const SizedBox(height: 30),
                          PrimaryButton(
                            label: "Login",
                            onTap: _signIn,
                            isLoading: _isLoading,
                          ),
                          const SizedBox(height: 24),
                          GestureDetector(
                            onTap: _showForgotPasswordSheet,
...
